--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Fernanda_</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
+        <p class="lead">Eu sou Giovanna_</p>
+        <h1>Eu estudo programacao</h1>
+        <p>Sou entudante do ensino medio. estudo pensamento computacional, anseio em crescer para alcancar meus objetivos. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
@@ -25,6 +24,7 @@
             <p class="badge bg-secondary">CSS</p>
             <p class="badge bg-secondary">JavaScript</p>
             <p class="badge bg-secondary">Scratch</p>
+            p class="badge bg-secondary">ter capacidade</p>
         </div>
     </header>
     <main class="container mt-5">
@@ -210,7 +210,7 @@
             <i class="bi bi-github"></i>
             <a href="https://github.com/femascheti">GitHub</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2024. Produzido por Fernanda Mascheti</p>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por Giovanna gabrielle</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
